--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="outer-circle">
                 <div class="profile-contact phone">
                     <img src="https://th.bing.com/th/id/OIP.4Sd6-1MJIzIisa_pNpHkpQHaHa?rs=1&pid=ImgDetMain" alt="Phone Icon" class="contact-icon">
-                    <a href="tel">+84 123 456 789</a>
+                    <a href="tel">+84 </a>
                 </div>
             </div>
 
@@ -24,7 +24,7 @@
             <div class="outer-circle">
                 <div class="profile-contact facebook">
                     <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook Icon" class="contact-icon">
-                    <a href="https://www.facebook.com/thach.thien.58323" target="_blank">facebook.com/yourprofile</a>
+                    <a href="https://www.facebook.com/thach.thien.58323" target="_blank">Facebook</a>
                 </div>
             </div>
 
@@ -32,7 +32,7 @@
             <div class="outer-circle">
                 <div class="profile-contact youtube">
                     <img src="https://th.bing.com/th/id/OIP.zjMhUcihfwmLxS5W3NBpMgHaHa?rs=1&pid=ImgDetMain" alt="YouTube Icon" class="contact-icon">
-                    <a href="https://www.youtube.com/@ttxmcpe1336" target="_blank">youtube.com/yourchannel</a>
+                    <a href="https://www.youtube.com/@ttxmcpe1336" target="_blank">Youtube</a>
                 </div>
             </div>
         </div>
