--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="outer-circle">
                 <div class="profile-contact phone">
                     <img src="https://th.bing.com/th/id/OIP.4Sd6-1MJIzIisa_pNpHkpQHaHa?rs=1&pid=ImgDetMain" alt="Phone Icon" class="contact-icon">
-                    <a href="tel">+84 </a>
+                    <a href="tel">+84 123 456 789</a>
                 </div>
             </div>
 
@@ -24,68 +24,18 @@
             <div class="outer-circle">
                 <div class="profile-contact facebook">
                     <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook Icon" class="contact-icon">
-                    <a href="https://www.facebook.com/thach.thien.58323" target="_blank">Facebook</a>
+                    <a href="https://www.facebook.com/thach.thien.58323" target="_blank">facebook.com/yourprofile</a>
                 </div>
             </div>
-
             <!-- Vòng tròn ngoài cho YouTube -->
             <div class="outer-circle">
                 <div class="profile-contact youtube">
                     <img src="https://th.bing.com/th/id/OIP.zjMhUcihfwmLxS5W3NBpMgHaHa?rs=1&pid=ImgDetMain" alt="YouTube Icon" class="contact-icon">
-                    <a href="https://www.youtube.com/@ttxmcpe1336" target="_blank">Youtube</a>
+                    <a href="https://www.youtube.com/@ttxmcpe1336" target="_blank">youtube.com/yourchannel</a>
                 </div>
             </div>
         </div>
     </div>
-    <style>
-        /* customizable snowflake styling */
-        .snowflake {
-          color: #fff;
-          font-size: 1em;
-          font-family: Arial, sans-serif;
-          text-shadow: 0 0 5px #000;
-        }
-        
-        .snowflake,.snowflake .inner{animation-iteration-count:infinite;animation-play-state:running}@keyframes snowflakes-fall{0%{transform:translateY(0)}100%{transform:translateY(110vh)}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;user-select:none;cursor:default;animation-name:snowflakes-shake;animation-duration:3s;animation-timing-function:ease-in-out}.snowflake .inner{animation-duration:10s;animation-name:snowflakes-fall;animation-timing-function:linear}.snowflake:nth-of-type(0){left:1%;animation-delay:0s}.snowflake:nth-of-type(0) .inner{animation-delay:0s}.snowflake:first-of-type{left:10%;animation-delay:1s}.snowflake:first-of-type .inner,.snowflake:nth-of-type(8) .inner{animation-delay:1s}.snowflake:nth-of-type(2){left:20%;animation-delay:.5s}.snowflake:nth-of-type(2) .inner,.snowflake:nth-of-type(6) .inner{animation-delay:6s}.snowflake:nth-of-type(3){left:30%;animation-delay:2s}.snowflake:nth-of-type(11) .inner,.snowflake:nth-of-type(3) .inner{animation-delay:4s}.snowflake:nth-of-type(4){left:40%;animation-delay:2s}.snowflake:nth-of-type(10) .inner,.snowflake:nth-of-type(4) .inner{animation-delay:2s}.snowflake:nth-of-type(5){left:50%;animation-delay:3s}.snowflake:nth-of-type(5) .inner{animation-delay:8s}.snowflake:nth-of-type(6){left:60%;animation-delay:2s}.snowflake:nth-of-type(7){left:70%;animation-delay:1s}.snowflake:nth-of-type(7) .inner{animation-delay:2.5s}.snowflake:nth-of-type(8){left:80%;animation-delay:0s}.snowflake:nth-of-type(9){left:90%;animation-delay:1.5s}.snowflake:nth-of-type(9) .inner{animation-delay:3s}.snowflake:nth-of-type(10){left:25%;animation-delay:0s}.snowflake:nth-of-type(11){left:65%;animation-delay:2.5s}
-        </style>
-        <div class="snowflakes" aria-hidden="true">
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-          <div class="snowflake">
-            <div class="inner">❅</div>
-          </div>
-        </div>        
     <audio id="background-music" src="https://stream.nct.vn/NhacCuaTui2052/ThienLyOi-JackJ97-13829746.mp3" loop></audio>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
