--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <div class="profile-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiLiHTOnnI3MKa-Ww9eMmHPAz73C7VtsuaTFQ7sAc84A&s" alt="Profile Avatar" class="profile-avatar" onclick="toggleMusic()">
         <div class="profile-name">Meow</div>
-        <a href="https://zalo.me/0917462397" target="_blank" class="profile-button">
+        <a href="https://zalo.me/" target="_blank" class="profile-button">
             <img src="https://img.icons8.com/color/48/000000/zalo.png" alt="Zalo Icon">
-            Zalo
+            Zalo ❌
         </a>
         <a href="https://discord.gg/bRVStqFE" target="_blank" class="profile-button">
             <img src="https://img.icons8.com/color/48/000000/discord-logo.png" alt="Discord Icon">
